add column and resolve footer responsiveness

--- a/index.html
+++ b/index.html
@@ -123,45 +123,44 @@
           </div>
         </div>
 
-        <div
-          class="row logos col-12 col-lg-6 mt-5 mt-lg-3 justify-content-around"
-        >
-          <div class="col-6 col-sm-4">
+        <div class="row logos mt-5 mt-lg-3">
+          <div class="col-lg-4 col-6">
             <img src="./icons/cpanel-logo.svg" alt="cpanel" />
           </div>
 
-          <div class="col-6 col-sm-4">
+          <div class="col-lg-4 col-6">
             <img src="./icons/imunify-logo.svg" alt="imunify" />
           </div>
 
-          <div class="col-6 col-sm-4">
+          <div class="col-lg-4 col-6">
             <img src="./icons/litespeed-logo.svg" alt="litespeed" />
           </div>
 
-          <div class="col-6 col-sm-4">
+          <div class="col-lg-4 col-6">
             <img src="./icons/softa-logo.svg" alt="softaculous" />
           </div>
 
-          <div class="col-6 col-sm-4">
+          <div class="col-lg-4 col-6">
             <img src="./icons/wordpress-logo.svg" alt="wordpress" />
           </div>
 
-          <div class="col-6 col-sm-4">
+          <div class="col-lg-4 col-6">
             <img src="./icons/cloudfare-logo.svg" alt="cloudflare" />
           </div>
         </div>
       </div>
     </main>
 
-    <div class="section-three-container">
-      <div class="row gx-0 justify-content-center section-three-wrapper">
-        <div class="col-3">
-          <div class="info-img one mb-3">
+    <div class="section-three-container text-center">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6">
+          <div class="mb-3 mx-auto">
             <img src="./icons/99.9.svg" alt="99.9" />
           </div>
 
           <div class="section-three-text text-center">
-            <span class="fw-bold">99.9% Uptime</span>
+            <h6 class="fw-bold">99.9% Uptime</h6>
             <p>
               We Keep Your Web build Online 24x7x365. Downtime not only costs
               you lost visitors but also damages your reputation and search
@@ -170,13 +169,13 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="info-img two mb-3">
+        <div class="col-lg-3 col-md-6">
+          <div class="info-img mb-3">
             <img class="" src="./icons/blazing.svg" alt="blazing" />
           </div>
 
           <div class="section-three-text">
-            <span class="fw-bold">Blazing Fast Web Hosting</span>
+            <h6 class="fw-bold">Blazing Fast Web Hosting</h6>
             <p>
               We Keep Your Web build Online 24x7x365. Downtime not only costs
               you lost visitors but also damages your reputation and search
@@ -185,13 +184,13 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="info-img three mb-3">
+        <div class="col-lg-3 col-md-6">
+          <div class="info-img mb-3">
             <img src="./icons/free-ssl-cert.svg" alt="ssl-cert" />
           </div>
 
           <div class="section-three-text text-center">
-            <span class="fw-bold">Free SSL Certificates</span>
+            <h6 class="fw-bold">Free SSL Certificates</h6>
             <p>
               We Keep Your Web build Online 24x7x365. Downtime not only costs
               you lost visitors but also damages your reputation and search
@@ -200,13 +199,13 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="info-img four mb-3">
+        <div class="col-lg-3 col-md-6">
+          <div class="info-img mb-3">
             <img src="./icons/24.7-icon.svg" alt="24/7" />
           </div>
 
           <div class="section-three-text text-center">
-            <span class="fw-bold">24x7 Friendly Support</span>
+            <h6 class="fw-bold">24x7 Friendly Support</h6>
             <p>
               We Keep Your Web build Online 24x7x365. Downtime not only costs
               you lost visitors but also damages your reputation and search
@@ -445,7 +444,7 @@
       </div>
     </section>
 
-    <section class="eigth-section">
+    <section class="eigth-section position-relative">
       <div class="content-wrapper">
         <div class="eigth-section-content">
           <h6>We're here to make your<br />website awesome.</h6>
@@ -456,19 +455,19 @@
         </div>
       </div>
 
-      <div class="top-triangle">
+      <div class="position-absolute top-0 start-50">
         <img src="/icons/top-triangle.svg" alt="top-triangle" />
       </div>
-      <div class="left-triangle">
+      <div class="position-absolute bottom-0 start-50">
         <img src="/icons/left-triangle.svg" alt="left-triangle" />
       </div>
-      <div class="right-triangle">
+      <div class="position-absolute bottom-0 end-0">
         <img src="/icons/right-triangle.svg" alt="right-triangle" />
       </div>
     </section>
 
     <div class="footer-container">
-      <footer class="row row-cols-6 py-5 my-5 align-items-start footer-wrapper">
+      <footer class="row py-5 my-5 align-items-start footer-wrapper">
         <div class="col footer-logo">
           <div class="footer-image">
             <img src="/icons/Lemon Wares white Logo 1500px wide 1.png" />
@@ -480,7 +479,7 @@
             purus non enim praesent elem
           </p>
         </div>
-        <div class="col footer-service">
+        <div class="col-md-12 footer-service">
           <h5>Service</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2">
@@ -506,7 +505,7 @@
           </ul>
         </div>
 
-        <div class="col footer-hosting">
+        <div class="col-md-3 footer-hosting">
           <h5>Hosting</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2">
@@ -532,7 +531,7 @@
           </ul>
         </div>
 
-        <div class="col footer-company">
+        <div class="col col-md-3 footer-company">
           <h5>Company</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2">
@@ -551,7 +550,7 @@
           </ul>
         </div>
 
-        <div class="col footer-help">
+        <div class="col col-md-3 footer-help">
           <h5>Help</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2">
